@startuml

title __MESSENGER's Class Diagram__\n

  namespace com.messenger {
    class com.messenger.MessengerController {
        {static} + allMessages : ArrayList<String>
        ~ logger : Logger
        - byteArray : byte[]
        - file : File
        - fileAttachButton : ImageView
        - fileChooser : FileChooser
        - messageList : ScrollPane
        - messageSendBox : TextArea
        - messageSendButton : ImageView
        - root : Pane
        - stage : Stage
        - themeChangeButton : ColorPicker
        - topPane : Pane
        + MessengerController()
        + generateAnimation()
        + initialize()
        + linkSenderAndReceiver()
        + newSendMessage()
        + saveFile()
        + saveReceivedMessage()
        + setReceiver()
        + setRoot()
        + setSender()
        + setStage()
        + showScene()
    }
  }
  

  namespace com.messenger {
    class com.messenger.Receiver {
        ~ logger : Logger
        {static} ~ vbox : VBox
        - connected : boolean
        - finalMessage : String
        - messageList : ArrayList<String>
        - messageListView : ScrollPane
        - receiver : Socket
        - receiverSocket : ServerSocket
        - root : Pane
        - sender : String
        - stage : Stage
        + Receiver()
        + getMessageList()
        + getReceiverPort()
        + isConnected()
        + run()
        + saveFile()
        + setRoot()
        + setStage()
    }
  }
  

  namespace com.messenger {
    class com.messenger.Sender {
        ~ logger : Logger
        - client : Socket
        - destinationIP : String
        - destinationPort : int
        - messageList : ArrayList<String>
        - messageListView : ScrollPane
        - messageToSend : String
        - root : Pane
        - sender : String
        + Sender()
        + Sender()
        + Sender()
        + getMessageList()
        + getSender()
        + getSenderPort()
        + run()
        + sendBackgroundColor()
        + sendFile()
        + sendMessage()
        + setRoot()
        + setSender()
    }
  }
  

  com.messenger.MessengerController o-- com.messenger.Receiver : receiver
  com.messenger.MessengerController o-- com.messenger.Sender : sender
  com.messenger.Sender o-- com.messenger.MessengerController : controller


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
